--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -82,3 +82,7 @@ required = [
 [[constraint]]
   branch = "master"
   name = "github.com/knative/pkg"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.4.0"
